update sbt build